--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 body {
       font-family: 'Apercu Pro Regular', 'Poppins', sans-serif;
-      height: 100vh;
+      height: 100dvh;
       background: #000000;
       color: #fff;
       padding: 1.875rem;
